--- a/event-service/src/main/resources/application.properties
+++ b/event-service/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-microservice.providers.url=http://localhost:8083
+microservice.providers.url=http://84.86.167.197:8083
 
 keycloak.public-client=true
 keycloak.bearer-only=true
